git counter app

--- a/Assignment projects/CSS Ques/CSS Q10/index.html
+++ b/Assignment projects/CSS Ques/CSS Q10/index.html
@@ -43,7 +43,7 @@
             <h1 class="heading-text">
              Hello! there <span> I am a </span> Web Developer
             </h1>
-            <button class="btn">Resume</button>
+            <button class="btn">Check Profile</button>
           </div>
           <!-- Right Text -->
           <div>
